manifest/bhasai/flowise/service-flowise.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowise
spec:
  selector:
    app.kubernetes.io/name: flowise
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
