manifest/bhasai/flowise/ingress-flowise.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowise 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "flowise.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: flowise
            port:
              number: 80
